some bug fixes, added service discovery

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,6 @@ project(xbot_framework C CXX)
 
 add_subdirectory(codegen)
 add_subdirectory(xbot_comms)
+
+add_subdirectory(tools/xbot_control_hub)
 add_subdirectory(example)
