--- a/tools/xbot_control_hub/CMakeLists.txt
+++ b/tools/xbot_control_hub/CMakeLists.txt
@@ -11,6 +11,15 @@ add_executable(xbot_hub main.cpp Socket.cpp
         ServiceDiscovery.cpp
         ServiceDiscovery.hpp
         ServiceInfo.hpp
-        ServiceInputInfo.hpp)
+        ServiceInputInfo.hpp
+        endpoint_utils.hpp
+        ServiceInterface.cpp
+        ServiceInterface.hpp
+        ServiceInterface.cpp
+        ServiceInterface.hpp
+        ServiceInfo.cpp
+        CrowToSpeedlogHandler.hpp
+        ServiceInterfaceFactory.cpp
+        ServiceInterfaceFactory.hpp)
 target_include_directories(xbot_hub PRIVATE . ${PROJECT_SOURCE_DIR}/../../include)
-target_link_libraries(xbot_hub PRIVATE nlohmann_json::nlohmann_json cli::cli Crow)
+target_link_libraries(xbot_hub PRIVATE nlohmann_json::nlohmann_json cli::cli Crow spdlog::spdlog)
