--- a/example/EchoService/CMakeLists.txt
+++ b/example/EchoService/CMakeLists.txt
@@ -1,6 +1,9 @@
 cmake_minimum_required(VERSION 3.25)
 project(EchoService C CXX)
 
+# Allow logging using ulog
+add_compile_definitions(ULOG_ENABLED)
+
 # Generate the service target
 add_service(EchoService ${CMAKE_CURRENT_SOURCE_DIR}/service.json)
 
