--- a/tools/xbot_control_hub/CMakeLists.txt
+++ b/tools/xbot_control_hub/CMakeLists.txt
@@ -13,13 +13,13 @@ add_executable(xbot_hub main.cpp Socket.cpp
         ServiceInfo.hpp
         ServiceInputInfo.hpp
         endpoint_utils.hpp
-        ServiceInterface.cpp
-        ServiceInterface.hpp
-        ServiceInterface.cpp
-        ServiceInterface.hpp
+        ServiceInterfaceBase.cpp
+        ServiceInterfaceBase.hpp
         ServiceInfo.cpp
         CrowToSpeedlogHandler.hpp
         ServiceInterfaceFactory.cpp
-        ServiceInterfaceFactory.hpp)
+        ServiceInterfaceFactory.hpp
+        GenericServiceInterface.cpp
+        GenericServiceInterface.hpp)
 target_include_directories(xbot_hub PRIVATE . ${PROJECT_SOURCE_DIR}/../../include)
 target_link_libraries(xbot_hub PRIVATE nlohmann_json::nlohmann_json cli::cli Crow spdlog::spdlog)
