CMake changes to allow portable code to be user defined

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,5 +4,10 @@ project(xbot_framework C CXX)
 add_subdirectory(codegen)
 add_subdirectory(xbot_comms)
 
-add_subdirectory(tools/xbot_control_hub)
-add_subdirectory(example)
+if (${XBOT_BUILD_APPS})
+    add_subdirectory(tools/xbot_control_hub)
+endif ()
+
+if (${XBOT_BUILD_EXAMPLES})
+    add_subdirectory(example)
+endif ()
