--- a/example/EchoService/CMakeLists.txt
+++ b/example/EchoService/CMakeLists.txt
@@ -1,13 +1,14 @@
 cmake_minimum_required(VERSION 3.25)
 project(EchoService C CXX)
 
-# Allow logging using ulog
-add_compile_definitions(ULOG_ENABLED)
 
 # Generate the service target
 add_service(EchoService ${CMAKE_CURRENT_SOURCE_DIR}/service.json)
 
-add_executable(EchoService main.cpp EchoService.cpp EchoService.hpp)
+add_executable(EchoServiceBin main.cpp EchoService.cpp EchoService.hpp)
 
 # Link the generated interface
-target_link_libraries(EchoService EchoServiceBase)
+target_link_libraries(EchoServiceBin EchoService)
+
+# Allow logging using ulog
+target_compile_definitions(ulog PUBLIC ULOG_ENABLED)
