--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.25)
 project(xbot_framework C CXX)
 
 add_subdirectory(codegen)
-add_subdirectory(xbot_comms)
+add_subdirectory(libxbot-service)
 
 if (${XBOT_BUILD_APPS})
     message("Building Apps")
