restructured repo, moved dependencies to single folder

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,10 @@
 cmake_minimum_required(VERSION 3.25)
 project(xbot_framework C CXX)
 
+add_subdirectory(ext)
 add_subdirectory(codegen)
 add_subdirectory(libxbot-service)
+add_subdirectory(libxbot-service-interface)
 
 if (${XBOT_BUILD_APPS})
     message("Building Apps")
