--- a/ext/CMakeLists.txt
+++ b/ext/CMakeLists.txt
@@ -8,3 +8,8 @@ zcbor/src/zcbor_decode.c
 zcbor/src/zcbor_encode.c
 )
 target_include_directories(zcbor PUBLIC zcbor/include)
+
+add_subdirectory(json)
+add_subdirectory(crow)
+add_subdirectory(spdlog)
+add_subdirectory(cli)
