--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "xbot_comms/ext/cpputest"]
-	path = libxbot-service/ext/cpputest
+	path = ext/cpputest
 	url = https://github.com/cpputest/cpputest.git
 [submodule "xbot_comms/ext/ulog"]
-	path = libxbot-service/ext/ulog
+	path = ext/ulog
 	url = https://github.com/ClemensElflein/ulog.git
 [submodule "xbot_comms/ext/zcbor"]
-	path = libxbot-service/ext/zcbor
+	path = ext/zcbor
 	url = https://github.com/NordicSemiconductor/zcbor.git
