--- a/tools/xbot_control_hub/CMakeLists.txt
+++ b/tools/xbot_control_hub/CMakeLists.txt
@@ -5,17 +5,7 @@ project(xbot_hub C CXX)
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_subdirectory(ext)
-
-add_executable(xbot_hub main.cpp Socket.cpp
-        ServiceDiscovery.cpp
-        ServiceDiscovery.hpp
-        data/ServiceInfo.hpp
-        data/ServiceInputInfo.hpp
-        endpoint_utils.hpp
-        data/ServiceInfo.cpp
-        CrowToSpeedlogHandler.hpp
-        ServiceInterfaceFactory.cpp
-        ServiceInterfaceFactory.hpp)
-target_include_directories(xbot_hub PRIVATE . ${PROJECT_SOURCE_DIR}/../../include)
-target_link_libraries(xbot_hub PRIVATE nlohmann_json::nlohmann_json cli::cli Crow spdlog::spdlog)
+add_executable(xbot_hub
+        main.cpp
+        PlotJugglerBridge.cpp)
+target_link_libraries(xbot_hub PRIVATE cli::cli cli::cli Crow xbot-service-interface)
