extracted serviceio and servicediscovery implementations as preparation for plugin system

--- a/libxbot-service-interface/CMakeLists.txt
+++ b/libxbot-service-interface/CMakeLists.txt
@@ -7,11 +7,10 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 add_library(xbot-service-interface
         src/Socket.cpp
-        src/ServiceIO.cpp
-        src/ServiceDiscovery.cpp
         src/ServiceInfo.cpp
         include/xbot-service-interface/ServiceInterfaceBase.hpp
         src/ServiceInterfaceBase.cpp
+        include/xbot-service-interface/Plugin.hpp
 )
 
 target_include_directories(xbot-service-interface PUBLIC
