--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -9,18 +9,35 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Install System Dependencies
-        run: sudo apt-get install -y uild-essential \
-          cmake \
-          git \
-          libasio-dev iproute2 \
-          python3 python3-venv python3-pip
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v3
       - uses: pre-commit/action@v3.0.1
-      - name: Build project
-        uses: nicledomaS/cmake_build_action@v1.4
+      - name: Set up QEMU (arm64)
+        if: runner.arch != 'arm64' && matrix.docker_build_arch == 'linux/arm64'
+        uses: docker/setup-qemu-action@v3
         with:
-
-          submodule_update: ON
-          run_tests: OFF
+          platforms: arm64
+      - name: Set up QEMU (x64)
+        if: runner.arch != 'x64' && matrix.docker_build_arch == 'linux/amd64'
+        uses: docker/setup-qemu-action@v3
+        with:
+          platforms: amd64
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Build and push
+        id: build-and-push
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./Dockerfile
+          platforms: linux/amd64,linux/arm64
+          no-cache: ${{ inputs.clean_build == true }}
+          labels: ${{ steps.meta.outputs.labels }}
+          outputs: type=local,dest=./build_output
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+      - uses: actions/upload-artifact@v4
+        name: Upload Artifact
+        with:
+          path: ./build_output
