add header files to CI artifact

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,4 +39,13 @@ if (XBOT_BUILD_EXAMPLES)
     add_subdirectory(examples)
     list(APPEND CPACK_COMPONENTS_ALL EchoServiceBin EchoServiceExample)
 endif ()
+
+if (XBOT_BUILD_LIB_SERVICE OR XBOT_BUILD_LIB_SERVICE_INTERFACE)
+    install(DIRECTORY ${CMAKE_SOURCE_DIR}/include/
+            DESTINATION include
+            FILES_MATCHING PATTERN "*.h*"
+    )
+endif ()
+
+
 include(CPack)
