--- a/libxbot-service/CMakeLists.txt
+++ b/libxbot-service/CMakeLists.txt
@@ -29,6 +29,11 @@ target_sources(xbot-service PRIVATE ${PORT_SOURCES})
 
 target_include_directories(xbot-service PUBLIC include ../include)
 target_link_libraries(xbot-service PUBLIC ulog etl)
+
+install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/
+        DESTINATION include
+        FILES_MATCHING PATTERN "*.h*"
+)
 install(TARGETS xbot-service)
 #set_property(TARGET xbot-service PROPERTY CXX_STANDARD 23)
 
