build libs by default, added possibility to create interfaces without generating a target

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,8 @@ project(xbot_framework C CXX)
 
 set(CPACK_COMPONENTS_ALL "")
 
+set(XBOT_BUILD_LIB_SERVICE ON)
+set(XBOT_BUILD_LIB_SERVICE_INTERFACE ON)
 
 # Avoid warning about DOWNLOAD_EXTRACT_TIMESTAMP
 if (CMAKE_VERSION VERSION_GREATER_EQUAL "3.24.0")
