Added OnCreate() to setup stuff

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,12 @@ project(xbot_framework C CXX)
 
 set(CPACK_COMPONENTS_ALL "")
 
+if(NOT DEFINED XBOT_BUILD_LIB_SERVICE)
 set(XBOT_BUILD_LIB_SERVICE ON)
+endif ()
+if(NOT DEFINED XBOT_BUILD_LIB_SERVICE_INTERFACE)
 set(XBOT_BUILD_LIB_SERVICE_INTERFACE ON)
+endif ()
 
 # Avoid warning about DOWNLOAD_EXTRACT_TIMESTAMP
 if (CMAKE_VERSION VERSION_GREATER_EQUAL "3.24.0")
